--- a/geek-m/path.tsconfig.json
+++ b/geek-m/path.tsconfig.json
@@ -2,9 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"],
+      "@scss/*": ["src/assets/styles/*"]
     }
   }
 }
