--- a/geek-m/package.json
+++ b/geek-m/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "antd-mobile": "^2.3.4",
     "antd-mobile-v5": "npm:antd-mobile@^5.3.1",
     "axios": "^0.21.4",
@@ -30,6 +33,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.35.2",
     "socket.io-client": "^4.4.1",
+    "typescript": "^4.6.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
